fixed sidebar column on small screen

--- a/src/pages/AdminDashboard/css/AdminDashboard.css
+++ b/src/pages/AdminDashboard/css/AdminDashboard.css
@@ -1,9 +1,13 @@
 @media (max-width: 992px) {
+    .admin-dashboard .row {
+        position: relative;
+    }
     .admin-dashboard .sidebar-column {
         position: absolute;
         right: -100%;
         transition: 1s;
         z-index: 1000;
+        height: 100%;
     }
     .admin-dashboard .sidebar-column.shown {
         right: 0;
