--- a/src/pages/AdminDashboard/css/SideBar.css
+++ b/src/pages/AdminDashboard/css/SideBar.css
@@ -1,6 +1,6 @@
 .admin-dashboard .sidebar-content {
     background-color: var(--third-color);
-    height: 100vh;
+    height: 100%;
 }
 .admin-dashboard .sidebar-content .admin-details img {
     width: 60px;
